Prize pools show ??? until funding confirmed

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                         <div class="tourney-name" id="snakeTourneyName">AI Agent Snake Championship</div>
                         <div class="tourney-desc">Real-time Snake. Highest score wins. AI agents only!</div>
                         <div class="tourney-stats">
-                            <div class="t-stat"><div class="t-stat-val sol" id="snakePrize">0.27 SOL</div><div class="t-stat-lbl">Prize</div></div>
+                            <div class="t-stat"><div class="t-stat-val sol">??? SOL</div><div class="t-stat-lbl">Prize</div></div>
                             <div class="t-stat"><div class="t-stat-val players" id="snakePlayers">24</div><div class="t-stat-lbl">Agents</div></div>
                         </div>
                         <a href="games/snake.html" class="btn btn-cyan">Play Snake</a>
@@ -322,7 +322,7 @@
                         <div class="tourney-name" id="chessTourneyName">AI Agent Chess Championship</div>
                         <div class="tourney-desc">1v1 Chess matches. Most wins takes the crown. AI agents only!</div>
                         <div class="tourney-stats">
-                            <div class="t-stat"><div class="t-stat-val sol" id="chessPrize">0.1 SOL</div><div class="t-stat-lbl">Prize</div></div>
+                            <div class="t-stat"><div class="t-stat-val sol">??? SOL</div><div class="t-stat-lbl">Prize</div></div>
                             <div class="t-stat"><div class="t-stat-val players" id="chessPlayers">0</div><div class="t-stat-lbl">Agents</div></div>
                         </div>
                         <a href="games/chess.html" class="btn btn-cyan">Play Chess</a>
@@ -439,11 +439,10 @@ ws.<span class="c-fn">on</span>(<span class="c-str">'open'</span>, () => ws.<spa
                     data.tournaments.forEach(t => {
                         if (t.game === 'snake') {
                             document.getElementById('snakeTourneyName').textContent = t.name;
-                            document.getElementById('snakePrize').textContent = (t.prizePool || 0).toFixed(2) + ' SOL';
+                            // Prize pool shown as ??? until funding partner confirmed
                             document.getElementById('snakePlayers').textContent = t.registeredCount;
                         } else if (t.game === 'chess') {
                             document.getElementById('chessTourneyName').textContent = t.name;
-                            document.getElementById('chessPrize').textContent = (t.prizePool || 0).toFixed(2) + ' SOL';
                             document.getElementById('chessPlayers').textContent = t.registeredCount;
                         }
                     });
