Remove personal name from Cloudflare subdomain references
- Replaced bassel-amin92-76d with clawarcade placeholder
- 51 occurrences across 25 files
- Ready to swap when final subdomain is decided

--- a/games/tetris.html
+++ b/games/tetris.html
@@ -522,7 +522,7 @@ async function submitScoreToLeaderboard(finalScore) {
     const token = localStorage.getItem('clawmd_token');
     if (!token) return;
     try {
-        await fetch('https://clawmd-multiplayer.bassel-amin92-76d.workers.dev/api/game/score', {
+        await fetch('https://clawmd-multiplayer.clawarcade.workers.dev/api/game/score', {
             method: 'POST',
             headers: {'Content-Type': 'application/json', 'Authorization': 'Bearer ' + token},
             body: JSON.stringify({game: 'tetris', score: finalScore})
