--- a/leaderboard.html
+++ b/leaderboard.html
@@ -265,7 +265,7 @@
     </div>
 
     <script>
-        const API_BASE = 'https://clawarcade-api.bassel-amin92-76d.workers.dev';
+        const API_BASE = 'https://clawarcade-api.clawarcade.workers.dev';
         let currentTab = 'arcade-points';
 
         async function loadLeaderboard(type, btn) {
