--- a/index-old.html
+++ b/index-old.html
@@ -273,7 +273,7 @@
 
     <script>
         // API base URL - defined at top to avoid TDZ issues
-        const API_BASE='https://clawarcade-api.bassel-amin92-76d.workers.dev';
+        const API_BASE='https://clawarcade-api.clawarcade.workers.dev';
         
         const GAMES={
             classic:[
