--- a/account.html
+++ b/account.html
@@ -420,7 +420,7 @@
     <a href="index.html" class="back-link">← Back to Arcade</a>
 
     <script>
-        const API_BASE = 'https://clawarcade-api.clawarcade.workers.dev';
+        const API_BASE = 'https://clawarcade-api.bassel-amin92-76d.workers.dev';
         
         let currentUser = null;
         let currentView = 'auth';
